1. Add self-designed message LaserRanges, contains ranges;angle;intensity. So we don't need to calculate angle distribution from angle_min and angle_increment
2. Add lidar_identifier scripts to distinguish between ls01c (Ameracian Chip) and ls01d (Israeli chip)

3. Add ls01d.cpp, my own driver test code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,17 +6,52 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   sensor_msgs
+  message_generation
 )
 
+add_message_files(
+  FILES
+  LaserRanges.msg)
 
-catkin_package()
+add_service_files(
+  FILES
+  CMD.srv)
+
+
+generate_messages(DEPENDENCIES
+  std_msgs
+)
+
+catkin_package(
+  CATKIN_DEPENDS
+  roscpp
+  rospy
+  std_msgs
+  message_runtime
+  )
+
+
 
 include_directories(
+  include ${catkin_INCLUDE_DIRS}
   ${catkin_INCLUDE_DIRS}/src
 )
 
+
+
 add_executable(ls01d src/main.cpp src/uart_driver.cpp)
+add_dependencies(ls01d ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(ls01d ${catkin_LIBRARIES})
+
+
+add_executable(ls01d2
+  src/ls01d.cpp
+  src/uart_driver.cpp
+)
+add_dependencies(ls01d2 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(ls01d2
+  ${catkin_LIBRARIES}
+)
 
 
 install(TARGETS ls01d
