--- a/package.xml
+++ b/package.xml
@@ -46,8 +46,11 @@
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
-
-
+  <build_depend>message_generation</build_depend>
+  <!--<build_export_depend>message_generation</build_export_depend>-->
+  <run_depend>message_runtime</run_depend>
+  <!--<run_depend>std_srvs</run_depend>
+  <build_depend>std_srvs</build_depend>-->
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
